<?php

namespace Subjig\Report\Domain;

class Session
{
    public string $id;
    public string $username;
}