<?php

namespace Subjig\Report\Model;

class ScheduleMCategory extends Model
{
}